B-F Sandbox Full-Backup/src/objects/B_F_Event__c.object
<CustomObject>
    <description>Created for FDC-PLFC Database to track responses to events</description>
    <fields>
        <fullName>Date__c</fullName>
        <description>FDC-PLFC</description>
        <inlineHelpText>Enter the date of the event</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <description>FDC-PLFC</description>
        <inlineHelpText>Enter purpose of and detailed description of the event</inlineHelpText>
        <label>Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <inlineHelpText>Where will the event be held?</inlineHelpText>
        <label>Location</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Attending__c</fullName>
        <inlineHelpText>Number of contacts where Status = Yes</inlineHelpText>
        <label>Number Attending</label>
        <summaryFilterItems>
            <field>B_F_Event_Response__c.Status__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>B_F_Event_Response__c.B_F_Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_Responded__c</fullName>
        <inlineHelpText>Number of contacts where Status does not equal &quot;Sent&quot;</inlineHelpText>
        <label>Number Responded</label>
        <summaryFilterItems>
            <field>B_F_Event_Response__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Sent</value>
        </summaryFilterItems>
        <summaryForeignKey>B_F_Event_Response__c.B_F_Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Invites__c</fullName>
        <inlineHelpText>Total number of related contacts</inlineHelpText>
        <label>Number of Invites</label>
        <summaryForeignKey>B_F_Event_Response__c.B_F_Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Possible_Attendees__c</fullName>
        <inlineHelpText>Number of Contacts where Status = Yes or Maybe</inlineHelpText>
        <label>Number of Possible Attendees</label>
        <summaryFilterItems>
            <field>B_F_Event_Response__c.Status__c</field>
            <operation>equals</operation>
            <value>Yes, Maybe</value>
        </summaryFilterItems>
        <summaryForeignKey>B_F_Event_Response__c.B_F_Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>B-F Event</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Location__c</columns>
        <columns>Number_Attending__c</columns>
        <columns>Number_of_Invites__c</columns>
        <columns>Number_of_Possible_Attendees__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>B-F Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>B-F Events</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>